# Website-Cloner

./: README.md
backend/: .dockerignore  .env  Dockerfile  README.md  env.example  pyproject.toml
backend/app/: gemini_cloner.py  grok_cloner.py  main.py  simple_scraper.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/clone/[id]/: page.tsx
frontend/src/components/: ClonePage.tsx  Toast.tsx
